--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -416,6 +416,7 @@
   publisher={Springer}
 }
 
+
 @article{WagenmakersEtAl2012,
   title={On the interpretation of removable interactions: A survey of the field 33 years after {Loftus}},
   author={Wagenmakers, Eric-Jan and Krypotos, Angelos-Miltiadis and Criss, Amy H and Iverson, Geoff},
@@ -1240,8 +1241,29 @@
   volume={21},
   number={7},
   pages={342--346},
-  year={2015},
+  year={2014},
   publisher={Cold Spring Harbor}
+}
+
+@article{MoreyEtAl2016,
+  title={The philosophy of {B}ayes factors and the quantification of statistical evidence.},
+  author={Morey, Richard D and Romeijn, Jan-Willem and Rouder, Jeffrey N},
+  journal={Journal of Mathematical Psychology},
+  volume={72},
+  pages={6--18},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{WagenmakersEtAl2016,
+  title={Bayesian benefits for the pragmatic researcher.},
+  author={Wagenmakers, Eric-Jan and Morey, Richard D and Lee, Michael D},
+  journal={Current Directions in Psychological Science},
+  volume={25},
+  number={3},
+  pages={169--176},
+  year={2016},
+  publisher={Sage}
 }
 
 @book{lee2014bayesian,
