--- a/paper/cognitive-modeling.tex
+++ b/paper/cognitive-modeling.tex
@@ -186,7 +186,7 @@ Cognitive aging researchers are interested in understanding how cognitive proces
 
 Cognitive aging researchers aim to understand how cognitive processes change across the adult lifespan, particularly into old age. However, it is impossible to observe a \enquote{cognitive process} directly; rather, we must infer cognitive processes from observed behavior (e.g., accuracy, reaction time). One way this is commonly done is by submitting raw data or aggregated data (e.g., mean RT by condition) to a \emph{t}-test, ANOVA, or mixed effects model and inferring process(es) through differences between conditions and their interaction with age. However, this interpretation relies on a simple mapping of cognitive processes onto observed behavior, which is unlikely to be the case and can result in incorrect conclusions about the source of age-differences (see Salthouse, 2000). In contrast to standard analysis, \emph{cognitive models} formalize the relationship between hypothesized underlying processes and observed behavior by way of parameters that reflect the contributions of latent cognitive processes, and are therefore more suitable for identifying what processes are (or are not) associated with aging.
 
-This paper provides a tutorial on fitting and interpreting cognitive models in the context of cognitive aging research. There are \emph{many} types of cognitive models, suitable for different tasks, and it would be impossible for us to exhaustively describe and implement all (or even a substantial subset) of them. Nevertheless, some of the models that may be most suitable for cognitive aging researchers are models of accuracy or reaction time, given that these are two of the most widely reported outcomes in studies of cognitive aging (see section \enquote{How Widespread is Cognitive Modeling in Cognitive Aging Research?}). A popular model of reaction time is the drift diffusion model ({\textbf{???}}), and popular models of accuracy include multinomial processing tree (MPT) models and signal detection theory (SDT) models. There are also many other models, including computational models, which attempt to formalize the underlying nature of a cognitive process (e.g., storage of features in memory as vectorized representations), though these are less common. In this tutorial, we use an example of a two choice discrimination task, given that this kind of task is widely used in cognitive aging research. We use an example of a SDT analysis, and in the supplement we also discuss MPT analyses. We have chosen to focus on highly flexible modeling software (Stan), and the tutorial below is written with the intention of generalizing to other areas, so that readers will be able to start implementing models that are relevant to their particular research area.\footnote{Indeed there are existing \texttt{R} packages that offer user-friendly implementations of hierarchical SDT models, including \texttt{bhsdtr} (Paulewicz \& Blaut, 2020) and \texttt{brms} (Bürkner (2017); see \url{https://vuorre.netlify.app/post/2017/10/09/bayesian-estimation-of-signal-detection-theory-models-part-1/}). In covering Stan we want to show readers how to implement models from scratch for situations where a user-friendly implementation does not exist or where more control over the details is desired.} Finally, the tutorial focuses on implementing hierarchical models under a Bayesian statistical framework. Hierarchical modeling allows one to model group level differences as well as individual differences simultaneously, and Bayesian model comparison allows researchers to go beyond null hypothesis significance testing to quantify the strength of evidence for or against age-related changes to particular cognitive processes (these benefits have been discussed extensively elsewhere; see, e.g., Gelman et al., 2014; Kruschke, 2015; Lee \& Wagenmakers, 2014).
+This paper provides a tutorial on fitting and interpreting cognitive models in the context of cognitive aging research. There are \emph{many} types of cognitive models, suitable for different tasks, and it would be impossible for us to exhaustively describe and implement all (or even a substantial subset) of them. Nevertheless, some of the models that may be most suitable for cognitive aging researchers are models of accuracy or reaction time, given that these are two of the most widely reported outcomes in studies of cognitive aging (see section \enquote{How Widespread is Cognitive Modeling in Cognitive Aging Research?}). A popular model of reaction time is the drift diffusion model (Ratcliff, 1978), and popular models of accuracy include multinomial processing tree (MPT) models and signal detection theory (SDT) models. There are also many other models, including computational models, which attempt to formalize the underlying nature of a cognitive process (e.g., storage of features in memory as vectorized representations), though these are less common. In this tutorial, we use an example of a two choice discrimination task, given that this kind of task is widely used in cognitive aging research. We use an example of a SDT analysis, and in the supplement we also discuss MPT analyses. We have chosen to focus on highly flexible modeling software (Stan), and the tutorial below is written with the intention of generalizing to other areas, so that readers will be able to start implementing models that are relevant to their particular research area.\footnote{Indeed there are existing \texttt{R} packages that offer user-friendly implementations of hierarchical SDT models, including \texttt{bhsdtr} (Paulewicz \& Blaut, 2020) and \texttt{brms} (Bürkner (2017); see \url{https://vuorre.netlify.app/post/2017/10/09/bayesian-estimation-of-signal-detection-theory-models-part-1/}). In covering Stan we want to show readers how to implement models from scratch for situations where a user-friendly implementation does not exist or where more control over the details is desired.} Finally, the tutorial focuses on implementing hierarchical models under a Bayesian statistical framework. Hierarchical modeling allows one to model group level differences as well as individual differences simultaneously, and Bayesian model comparison allows researchers to go beyond null hypothesis significance testing to quantify the strength of evidence for or against age-related changes to particular cognitive processes (these benefits have been discussed extensively elsewhere; see, e.g., Gelman et al., 2014; Kruschke, 2015; Lee \& Wagenmakers, 2014).
 
 Although the following tutorial is intended to be an aid for novice modelers, and a refresher for more expert modelers, we acknowledge upfront that learning cognitive modeling will take time and patience. This tutorial alone may not be sufficient for learning everything about cognitive modeling, given the breadth of research on this topic. To that end, we discuss some of the best practices for researchers to consider as they begin their journey with cognitive modeling (see section \enquote{Recommendations on Best Practices and Further Readings}). We also acknowledge that mastering cognitive modeling will likely require learning some rather technical concepts. Although we aim to keep this tutorial as accessible as possible for the novice reader, it would be a disservice to avoid technical details where they are necessary. Nevertheless, we aim to break these technical details down into simpler terms to ease with understanding. Ultimately, it is our hope that this tutorial will serve as a useful guide and a great starting point for cognitive aging researchers who are interested in learning cognitive modeling and applying such models to their own data.
 
@@ -709,20 +709,31 @@ Widespread use of cognitive modeling in cognitive aging research can be useful f
 
 This tutorial is likely to serve as one important learning tool for cognitive aging researchers as they begin to embark on their own cognitive modeling journeys. However, there are certainly other resources to consult, and learning cognitive modeling requires time, patience, and dedication. For a lengthier read about cognitive modeling in general (though not with specific applications in aging, per se), we recommend the great book by Farrell and Lewandowsky (2018), which also includes references to R code and Bayesian modeling. There are many great books for learning Bayesian statistics more generally, including Kruschke (2015) and McElreath (2016) (and see the article by Etz, Gronau, Dablander, Edelsbrunner, and Baribault (2018) for an annoted reading list). Finally, many great articles on the topic of cognitive modeling were published in the December 2019 issue of \emph{Computational Brain \& Behavior}, which featured a lengthy discussion among several top cognitive modelers on the topic of robust modeling in cognitive science (Lee et al., 2019) and other best practices in cognitive modeling, including whether cognitive models should be pre-registered (MacEachern \& Van Zandt, 2019).
 
-Cognitive modeling is an ever-evolving field. Therefore, it is important that cognitive modelers keep as up-to-date as possible with new advances and recommended practices. In this tutorial, we focused on hierarchical Bayesian estimation of cognitive models, as estimation under a hierarchical Bayesian framework is suitable for addressing both and individual- and group-level effects simultaneously and is a powerful technique for non-linear modeling, which is often not possible with frequentist methods. Bayesian analyses are more robust than frequentist equivalents, as they can regularize inference in low-power situations (Morey, Romeijn, \& Rouder, 2016) and are suitable for quantifiying uncertainty about cognitive parameters, and models in general (Wagenmakers, Morey, \& Lee, 2016). When adopting a Bayesian analytical approach for cognitive modeling, researchers should consider the following practices regarding choice of prior specification of model parameters; diagnostic checks of model adequacy, convergence, and fit; and posterior predictive checks of the model, using simulations from the model's posterior distribution (for a more detailed discussion, including a recommended work-flow, see ({\textbf{???}})). In addition, it is often necessary to compare multiple models, and such comparisons can be made in a Bayesian framework with a Bayes factor approach, though researchers should be mindful of the sensitivity of Bayes factors to priors. We discuss each of these points in more depth below.
+Cognitive modeling is an ever-evolving field. Therefore, it is important that cognitive modelers keep as up-to-date as possible with new advances and recommended practices. In this tutorial, we focused on hierarchical Bayesian estimation of cognitive models, as estimation under a hierarchical Bayesian framework is suitable for addressing both and individual- and group-level effects simultaneously and is a powerful technique for non-linear modeling, which is often not possible with frequentist methods. Bayesian analyses are more robust than frequentist equivalents, as they can regularize inference in low-power situations (Morey, Romeijn, \& Rouder, 2016) and are suitable for quantifiying uncertainty about cognitive parameters, and models in general (Wagenmakers, Morey, \& Lee, 2016). When adopting a Bayesian analytical approach for cognitive modeling, researchers should consider the following practices regarding choice of prior specification of model parameters; diagnostic checks of model adequacy, convergence, and fit; and posterior predictive checks of the model, using simulations from the model's posterior distribution (for a more detailed discussion, including a recommended work-flow, see Schad, Betancourt, and Vasishth (2020)). In addition, it is often necessary to compare multiple models, and such comparisons can be made in a Bayesian framework with a Bayes factor approach, though researchers should be mindful of the sensitivity of Bayes factors to priors. We discuss each of these points in more depth below.
 
 \hypertarget{choice-of-priors}{%
 \subsubsection{Choice of Priors}\label{choice-of-priors}}
 
-An important ingredient in a Bayesian model is the prior distribution of the model's parameters. The prior conveys our beliefs about the values a parameter should take before we see the data; although this may seem \enquote{subjective,} a good prior is chosen based on a careful consideration of the literature. There is no one perfect prior that fits every model. Instead, priors need to be chosen based on reasonable assumptions about what values are plausible for a parameter. For example, if a researcher is interested in comparing reaction times between young and older adults with a drift diffusion model, specifying a prior on the drift rate parameter that places most of its weight on extreme reaction times of, for instance, less than 50 ms would be a bad prior, as too much prior weight is given to implausible reaction times. We recommend that researchers select priors that are sensible for their experimental design and the research question at hand. Priors can be chosen to be weakly informative, such that they do not weigh as heavily as the data in determining the values of the posterior distribution. However, researchers should be careful when choosing diffuse priors (which cast a wide net overly an extremely large range of plausible values for a parameter), as these can result in extremely large and unreliable posterior estimates if the data is underpowered. For non-linear models, which are common for cognitive models, priors need to be informative enough to ensure the posterior sampling algorithm (e.g., MCMC) can get started and that posterior chains can converge.
+An important ingredient in a Bayesian model is the prior distribution of the model's parameters. The prior conveys our beliefs about the values a parameter should take before we see the data; although this may seem \enquote{subjective,} a good prior is chosen based on a careful consideration of the literature. There is no one perfect prior that fits every model. Instead, priors need to be chosen based on reasonable assumptions about what values are plausible for a parameter. For example, if a researcher is interested in comparing reaction times between young and older adults with a drift diffusion model, specifying a prior on the drift rate parameter that places most of its weight on extreme reaction times of, for instance, less than 50 ms would be a bad prior, as too much prior weight is given to implausible reaction times (for a discussion of why such fast reaction times are implausible, see, for example Rouder, Tuerlinckx, Speckamn, Lu, and Gomez (2008)).
 
-Researchers should evaluate how influential their priors were by conducting prior sensitivty analyses, in which they compare the posterior distribution of the model parameters, based on the same data set, with different prior specifications. These may include a weakly informative prior and a highly informative prior. Subtle changes in the posterior distribution are likely to occur, but if substantial changes occur, this may call into question how reliable the data were, or whether the chosen prior was appropriate. (Want to say something here also about prior predictive checks)
+We recommend that researchers select priors that are sensible for their experimental design and the research question at hand. Priors can be chosen to be weakly informative, such that they do not weigh as heavily as the data in determining the values of the posterior distribution. However, researchers should be careful when choosing diffuse priors (which cast a wide net overly an extremely large range of plausible values for a parameter), as these can result in extremely large and unreliable posterior estimates if the data is underpowered. For non-linear models, which are common for cognitive models, priors need to be informative enough to ensure the posterior sampling algorithm (e.g., MCMC) can get started and that posterior chains can converge. It is also important to consider what scale the priors are being modeled on; a Normal(0,10) prior may be weakly informative when working with parameters that are modeled on the raw scale of the data, but could be extremely diffuse if the model parameters are on a log-normal scale.
+
+Researchers should evaluate how influential their priors were by conducting prior sensitivty analyses, in which they compare the posterior distribution of the model parameters, based on the same data set, with different prior specifications. These may include a weakly informative prior and a highly informative prior. Subtle changes in the posterior distribution are likely to occur, but if substantial changes occur, this may call into question how reliable the data were, or whether the chosen prior was appropriate.
+
+Sometimes a prior may be grossly inadequate for a particular research question. Researchers may consider conducting a prior predictive check to test whether their chosen priors make reasonable predictions about the possible values a parameter may take or whether these priors result in overestimation extreme values (for a detailed discussion on prior predictive checks, including a worked example, see Schad et al. (2020)).
 
 \hypertarget{diagnosing-model-convergence}{%
 \subsubsection{Diagnosing Model Convergence}\label{diagnosing-model-convergence}}
 
+Cognitive models are too complex for their posterior distributions to be solved analytically. Instead, estimation of the posterior distribution relies on sampling from it with an algorithm, usually an MCMC algorithm. A detailed discussion of MCMC is beyond the scope of this article. However, it is important to ensure that the algorithm produced reliable posterior estimates. When sampling from the model's posterior distribution, it is recommended that the analyst run multiple chains (usually at least 3 or 4). From each chain, the analyst specifies a set number of iterations, as we demonstrated in our worked example in this tutorial. The first several hundred (or, in some cases, thousands) of these iterations should be designated as burn-in samples, which are discarded from the actual posterior summaries of the model's parameters. This burn-in period is necessary to ensure that the chains converge to the same values of the posterior distribution. Convergence can be diagnosed in multiple ways, as with an autocorrelation plot, which shows how correlated successive iterations of the sampling algorithm are across various lags. For example, an autocorrelation plot can demonstrate whether two samples drawn from the posterior distribution at 50 iterations apart are very highly correlated; if they are, this likely indicates that the MCMC algorithm is getting stuck in some region of the posterior distribution. The analyst can correct for high autocorrelation by running a higher number of iterations and setting a thinning rate to ensure that only every, say, 10 iterations are retained. Convergence can also be diagnosed with the Gelman-Rubin statistic described in Gelman et al. (2014).
+
 \hypertarget{assessing-model-fit-posterior-predictive-checks}{%
 \subsubsection{Assessing Model Fit: Posterior Predictive Checks}\label{assessing-model-fit-posterior-predictive-checks}}
+
+After fitting a model, it is the researcher's responsibility to ensure the model actually fits the data and to assess the predictive power of the model to fit unseen data. One way to do this is with posterior predictive checks, which we described in our worked example earlier. The basic idea of a posterior predictive check is that, based on the posterior distribution of the model, random samples of \enquote{new} data are simulated. Next, these new samples are compared with the observed data, and a good match (e.g., in terms of some summary statistic, like a mean) indicates that the model fits well because it can recover the summary statistics of the data in its simulations.
+
+\hypertarget{conclusions}{%
+\subsection{Conclusions}\label{conclusions}}
 
 To conclude, aging researchers seeking to understand age differences in cognitive processes should consider incorporating cognitive modeling, either in lieu of standard statistical analyses applied to the raw data, or to supplement those analyses with models that parameterize the latent cognitive processes of theoretical or empirical interest.
 
@@ -868,8 +879,14 @@ Rotello, C. M., Masson, M. E., \& Verde, M. F. (2008). Type I error rates and po
 \leavevmode\hypertarget{ref-rouder2005introduction}{}%
 Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models with an application in the theory of signal detection. \emph{Psychonomic Bulletin \& Review}, \emph{12}(4), 573--604.
 
+\leavevmode\hypertarget{ref-RouderEtAl2008rt}{}%
+Rouder, J. N., Tuerlinckx, F., Speckamn, P., Lu, J., \& Gomez, P. (2008). A hierarchical approach for fitting curves to response time measurements. \emph{Psychonomic Bulletin \& Review}, \emph{15}(6), 1201--1208.
+
 \leavevmode\hypertarget{ref-Salthouse2000}{}%
 Salthouse, T. A. (2000). Methodological assumptions in cognitive aging research. In F. I. M. Craik \& T. A. Salthouse (Eds.), \emph{The handbook of cognitive aging} (2nd ed., pp. 467--498). Mahwah,NJ: Erlbaum.
+
+\leavevmode\hypertarget{ref-SchadEtAlpreprint}{}%
+Schad, D. J., Betancourt, M., \& Vasishth, S. (2020). Toward a principled Bayesian workflow in cognitive science. Retrieved from \url{https://arxiv.org/abs/1904.12765}
 
 \leavevmode\hypertarget{ref-selker2019parsimonious}{}%
 Selker, R., Bergh, D. van den, Criss, A. H., \& Wagenmakers, E.-J. (2019). Parsimonious estimation of signal detection models from confidence ratings. \emph{Behavior Research Methods}, \emph{51}(5), 1953--1967.
