--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -681,6 +681,16 @@
  year = {2008}
 }
 
+@article{RouderEtAl2008rt,
+ author = {Rouder, Jeffrey N and Tuerlinckx, Francis and Speckamn, Paul and Lu, Jun and Gomez, Pablo},
+ title = {A hierarchical approach for fitting curves to response time measurements.},
+ journal = {Psychonomic Bulletin \& Review},
+ volume = {15},
+ number = {6},
+ pages = {1201--1208},
+ year = {2008}
+}
+
 @article{ChapmanAndChapman1973,
   title={Problems in the measurement of cognitive deficits.},
   author={Chapman, Loren J and Chapman, Jean P},
@@ -905,6 +915,14 @@
   pages={590--597},
   year={1996},
   publisher={Springer}
+}
+
+@article{SchadEtAlpreprint,
+  title={Toward a principled {B}ayesian workflow in cognitive science.},
+  author={Schad, Daniel J and Betancourt, Michael and Vasishth, Shravan},
+  note = {Preprint},
+  url = {https://arxiv.org/abs/1904.12765},
+  year={2020}
 }
 
 @book{GelmanEtAl2014,
