--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1347,3 +1347,25 @@
   year={2012},
   publisher={American Psychological Association}
 }
+
+@article{bayen1996source,
+  title={Source discrimination, item detection, and multinomial models of source monitoring.},
+  author={Bayen, Ute J and Murnane, Kevin and Erdfelder, Edgar},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={22},
+  number={1},
+  pages={197},
+  year={1996},
+  publisher={American Psychological Association}
+}
+
+@article{yonelinas1994receiver,
+  title={Receiver-operating characteristics in recognition memory: evidence for a dual-process model.},
+  author={Yonelinas, Andrew P},
+  journal={Journal of Experimental Psychology: Learning, Memory, and Cognition},
+  volume={20},
+  number={6},
+  pages={1341},
+  year={1994},
+  publisher={American Psychological Association}
+}
